--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <section class="cardio-sel-chart">
         <div class="cardio-sel-div">
             <select name="" id="cardio-sel" class="cardio-sel">
-                <option value="1.5 Mile Run">1.5 Mile</option>
+                <option value="1.5 Mile">1.5 Mile</option>
                 <option value="Shuttle Run">Shuttle Run</option>
                 <option value="Walk">Walk</option>
                 <option value="Exempt">Exempt</option>
