--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </section>
 
     <!-- Section 8 - Situps Select & Textbox -->
-    <section class="sit-sel-chart">
+    <section id="sit-sel-chart-section" class="sit-sel-chart">
 
             <select name="" id="sit-sel" class="sit-sel">
                 <option value="Situps">Situps</option>
@@ -86,13 +86,13 @@
                 <option value="Exempt">Exempt</option>
             </select>
 
-        <div class="pushsit-see-chart-btn">
+        <div id="abs-see-chart-btn" class="pushsit-see-chart-btn">
             <button>See Chart</button>
         </div>
         <input type="text" class="sit-txt">
-        <input type="text" class="rsit-txt">
-        <input type="text" class="plankmin-txt">
-        <input type="text" class="planksec-txt">
+        <p class="plank-colon" hidden>:</p>
+        <input type="text" id="plankmintxt" class="plankmin-txt">
+
 
     </section>
 
