--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </section>
 
     <!-- Section 11 - Run Select -->
-    <section class="cardio-sel-chart">
+    <section class="cardio-sel-chart" id="cardio-sel-chart">
         <div class="cardio-sel-div">
             <select name="" id="cardio-sel" class="cardio-sel">
                 <option value="1.5 Mile">1.5 Mile</option>
@@ -117,11 +117,11 @@
                 <option value="Exempt">Exempt</option>
             </select>
         </div>
-        <div class="cardio-see-chart-btn">
-            <button>See Chart</button>
+        <div id="cardio-see-chart-btn" class="cardio-see-chart-btn">
+            <button id="see-chart">See Chart</button>
         </div>
             <input type="text" class="run-mintxt">
-            <p class="colon">:</p>
+            <p id="colon" class="colon">:</p>
             <input type="text" class="run-sectxt">
             <input type="text" class="shuttle-txt">
             <input type="text" class="walk-txt">
