--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <!-- Section 2 - Score Text -->
     <section class="score-txt">
-        <p>Total Score: <span>60.0<br>
-        Fail! Minimum Not Met!</span></p>
+        <p id="score-txt">Total Score: 60.0<br>
+        Fail! Minimum Not Met!</p>
     </section>
 
     <!-- Section 3 - Sex Label & Select -->
