--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div class="pushsit-see-chart-btn">
             <button>See Chart</button>
         </div>
-        <input type="text" class="push-txt" id="push-txt">
-        <input type="text" class="hrpush-txt">
+        <input type="tel" pattern="[0-9]+" class="push-txt" id="push-txt">
+        <input type="tel" class="hrpush-txt">
     </section>
 
     <!-- Section 6 - Pushups Slider -->
@@ -89,9 +89,9 @@
         <div id="abs-see-chart-btn" class="pushsit-see-chart-btn">
             <button>See Chart</button>
         </div>
-        <input type="text" class="sit-txt">
+        <input type="tel" class="sit-txt">
         <p class="plank-colon" hidden>:</p>
-        <input type="text" id="plankmintxt" class="plankmin-txt">
+        <input type="tel" id="plankmintxt" class="plankmin-txt">
 
 
     </section>
@@ -120,11 +120,11 @@
         <div id="cardio-see-chart-btn" class="cardio-see-chart-btn">
             <button id="see-chart">See Chart</button>
         </div>
-            <input type="text" class="run-mintxt">
+            <input type="tel" class="run-mintxt">
             <p id="colon" class="colon">:</p>
-            <input type="text" class="run-sectxt">
-            <input type="text" class="shuttle-txt">
-            <input type="text" class="walk-txt">
+            <input type="tel" class="run-sectxt">
+            <input type="tel" class="shuttle-txt">
+            <input type="tel" class="walk-txt">
     </section>
         
 
