--- a/index.html
+++ b/index.html
@@ -135,8 +135,18 @@
     </section>
 
     <!-- Run Lap Times -->
-    <section>
+    <section class="runlaps-row">
         <p class="run-lap-times" id="run-lap-times"></p>
+        <div>
+            <select>
+                <option value="Altitude Adjust">Altitude Adjust</option>
+                <option value=""></option>
+                <option value=""></option>
+                <option value=""></option>
+                <option value=""></option>
+            </select>
+        </div>
+
     </section>
 
     <!-- Reset & Calc Score Btns -->
