--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
     <section class="runlaps-row">
         <p class="run-lap-times" id="run-lap-times"></p>
         <div>
-            <select>
+            <select id="alt-select">
                 <option value="Altitude Adjust">Altitude Adjust</option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
+                <option value="Group 1 (5250-5499ft)">Group 1 (5250-5499ft)</option>
+                <option value="Group 2 (5500-5999ft)">Group 2 (5500-5999ft)</option>
+                <option value="Group 3 (6000-6599ft)">Group 3 (6000-6599ft)</option>
+                <option value="Group 4 (>6600ft)">Group 4 (>6600ft)</option>
             </select>
         </div>
 
