--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 </head>
 <body>
     <!-- Section 1 - Info Button -->
-    <section>
-        <div class="info-btn"><button>
-            Info
-        </button></div>
+    <section class="info-section">
+        <div>AFPTCalc</div>
+    <input id="menu-toggle" type="checkbox" />
+    <label class='menu-button-container' for="menu-toggle">
+    <div class='menu-button'></div>
+  </label>
+    <ul class="menu">
+      <li>One</li>
+      <li>Two</li>
+      <li>Three</li>
+      <li>Four</li>
+      <li>Five</li>
+    </ul>
     </section>
 
     <!-- Section 2 - Score Text -->
