--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
         <span class="close-btn" id="close-btn" role="button">&times;</span>
         <img id="modal-img"></img>
     </div>
+    <div class="install-modal" id="install-modal">
+        <article class="modal__article">
+          <h4 class="modal-title">Did You Know?</h4>
+          <p class="modal-msg">You can download this app for offline use of all charts and 
+              shuttle audio! Just click the hamburger menu and click Download App For Offline Use.
+              Note: iPhone users have to click the <img id="apple-arrow" src="arrow.png"> icon and click Add To Homescreen.
+          </p>
+        </article>
+        
+        <footer>
+          <button id="install-close" class="button button-full button-close">close</button>
+        </footer>
+    </div>
     <!-- Section 1 - Info Button -->
     <section class="info-section">
         <div class="logo">AFPTCalc</div>
