--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         }
 
                         if (isIos() && !isPwa()) {
-                            openModal();
+                            document.getElementById('install-modal').classList.add('in');
                         }
                     });
                   }) 
