--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h4 class="modal-title">Did You Know?</h4>
           <p class="modal-msg">You can download this app for offline use of all charts and 
               shuttle audio! Just click the hamburger menu and click Download App For Offline Use.
-              Note: iPhone users have to click the <img id="apple-arrow" src="arrow.png"> icon and click Add To Homescreen.
+              Note: iPhone users have to click the <img id="apple-arrow" src="arrow.png"> icon below and click Add To Homescreen.
           </p>
         </article>
         
