--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     }
                 )};
         </script>
-        <link rel="apple-touch-icon" href="./home-screen-icon.png">
-        <link rel="icon" href="./home-screen-icon.png">
+        <link rel="apple-touch-icon" href="./icon-144x144.png">
+        <link rel="icon" href="./icon-144x144.png">
         <link rel="stylesheet" href="style.css">
         <link rel="manifest" href="./manifest.webmanifest">
       </head>
